--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,9 @@ img {
 .nav-link {
   color: var(--secondary-color-text);
 }
+.nav-menu.current {
+  color: var(--accent-color);
+}
 /* Adress */
 .address .address-link:hover,
 .address .address-link:focus {
@@ -177,6 +180,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.04em;
   padding: 16px;
+  transition: background-color 0.25s ease-in-out;
 }
 .hero-section .hero-buttom:hover,
 .hero-section .hero-buttom:focus {
@@ -349,6 +353,8 @@ img {
 .web-link:hover,
 .web-link:focus {
   background-color: var(--accent-color);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 .web-icon {
   fill: var(--secondary-background);
@@ -434,6 +440,7 @@ fill: var(--accent-color);
 .cards-link:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* Footer */
 .logo-footer {
@@ -509,4 +516,30 @@ margin-bottom: 16px;
 }
 .social-svg {
   fill: var(--secondary-background);
+}
+
+.cards-link:hover .cards-bottom-text {
+  transform: translateY(0%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.cards-bottom-info {
+  position: relative;
+  overflow: hidden;
+}
+
+.cards-bottom-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: #F4F4FD;
+  background-color: #4D5AE5;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  padding: 40px;
+  height: 100%;
+  width: 360px;
+  
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
