--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,7 @@ img {
   line-height: 1.5;
 }
 .nav-menu .link {
+  position: relative;
   display: block;
   padding-top: 24px;
   padding-bottom: 24px;
@@ -104,8 +105,19 @@ img {
 .nav-link {
   color: var(--secondary-color-text);
 }
-.nav-menu.current {
+.current {
   color: var(--accent-color);
+}
+.current::after {
+  position: absolute;
+    display: inline;
+    content: "";
+    background-color: var(--accent-color);
+    top: 68px;
+    left: 0;
+    width: 100%;
+    height: 5px;
+    border-radius: 2px;
 }
 /* Adress */
 .address .address-link:hover,
@@ -542,4 +554,27 @@ margin-bottom: 16px;
   
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal {
+  width: 408px;
+  min-height: 584px;
+  background-color: #FFFFFF;
+  border-radius: 4px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: scale(1) translate(-50%, -50%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-close-btn {
+    background-color: transparent;
+    border-radius: 100%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    top: 10px;
+    right: 10px;
+
 }
