--- a/css/styles.css
+++ b/css/styles.css
@@ -92,6 +92,7 @@ img {
   display: block;
   padding-top: 24px;
   padding-bottom: 24px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-menu .item:not(:last-child) {
@@ -100,7 +101,6 @@ img {
 .nav-menu .nav-link:hover,
 .nav-menu .nav-link:focus {
   color: var(--accent-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-link {
@@ -120,12 +120,12 @@ img {
     width: 100%;
     height: 4px;
     border-radius: 2px;
+    bottom: -1px
 } 
 /* Adress */
 .address .address-link:hover,
 .address .address-link:focus {
   color: var(--accent-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address {
   font-style: normal;
@@ -140,8 +140,8 @@ img {
 .address .address-link {
   font-size: 16px;
   line-height: 1.5;
-
   color: var(--primary-text-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* Links */
 .list {
@@ -231,6 +231,9 @@ img {
   color: #ffffff;
   border: 1px solid transparent;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* Section */
 .svg-back-features {
@@ -526,19 +529,20 @@ margin-bottom: 16px;
   height: 40px;
   border-radius: 50%;
   background-color: var(--primary-brand);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-link:hover,
 .social-link:focus {
   background-color: #31d0aa;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-svg {
   fill: var(--secondary-background);
 }
 
-.cards-link:hover .cards-bottom-text {
+.cards-link:hover,
+.card-link:focus {
   transform: translateY(0%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .cards-bottom-info {
@@ -554,7 +558,7 @@ margin-bottom: 16px;
   background-color: #4D5AE5;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  padding: 40px;
+  padding: 40px 32px;
   height: 100%;
   width: 360px;
   
@@ -564,7 +568,7 @@ margin-bottom: 16px;
 
 .backdrop {
   position: fixed;
-  width: 408px;
+  width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
   border-radius: 4px;
@@ -573,8 +577,22 @@ margin-bottom: 16px;
   transform: scale(1) translate(-50%, -50%);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal {
-  
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+.modal{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  width: 408px;
+  min-height: 584px;
+  background: #fcfcfc;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close-btn {
   position: absolute;
@@ -593,10 +611,14 @@ margin-bottom: 16px;
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-close-btn:hover,
-.modal-close-btn:focus {
+.modal-close-btn-icon:hover,
+.modal-close-btn-icon:focus {
   background-color: #404bbf;
   border: none;
+}
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+  fill: #ffffff;
 }
 .modal-close-btn-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
