--- a/css/styles.css
+++ b/css/styles.css
@@ -224,6 +224,9 @@ img {
   padding: 12px 24px;
   border: 1px solid #e7e9fc;
   border-radius: 4px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-filter:focus,
 .button-filter:hover {
@@ -231,9 +234,6 @@ img {
   color: #ffffff;
   border: 1px solid transparent;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-  box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* Section */
 .svg-back-features {
@@ -568,15 +568,12 @@ margin-bottom: 16px;
 
 .backdrop {
   position: fixed;
-  width: 100%;
+  z-index: 100;
   height: 100%;
-  background-color: rgba(46, 47, 66, 0.4);
-  border-radius: 4px;
   top: 0;
   left: 0;
-  transform: scale(1) translate(-50%, -50%);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  background-color: rgba(46, 47, 66, 0.4);
+  transition: visibility, opacity }
 .is-hidden {
   opacity: 0;
   visibility: hidden;
@@ -589,6 +586,7 @@ margin-bottom: 16px;
   transform: translate(-50%, -50%) scale(1);
   width: 408px;
   min-height: 584px;
+  border-radius: 4px;
   background: #fcfcfc;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -611,15 +609,15 @@ margin-bottom: 16px;
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-close-btn-icon:hover,
-.modal-close-btn-icon:focus {
+.modal-close-btn:hover,
+.modal-close-btn:focus {
   background-color: #404bbf;
   border: none;
 }
-.modal-close-btn:hover,
-.modal-close-btn:focus {
-  fill: #ffffff;
-}
 .modal-close-btn-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-close-btn-icon:hover,
+.modal-close-btn-icon:focus {
+  fill: #ffffff;
 }
