--- a/css/styles.css
+++ b/css/styles.css
@@ -395,6 +395,8 @@ img {
   display: flex;
   justify-content: center;
   gap: 24px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+   color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .customers-link {
   width: 100%;
@@ -456,12 +458,15 @@ fill: var(--accent-color);
 }
 .cards-link {
   display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .cards-link:hover,
 .cards-link:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translateY(0%);
+    transform: translateY(0%);
 }
 /* Footer */
 .logo-footer {
@@ -569,12 +574,13 @@ margin-bottom: 16px;
 
 .backdrop {
   position: fixed;
-  z-index: 100;
+  width: 100%;
   height: 100%;
   top: 0;
   left: 0;
   background-color: rgba(46, 47, 66, 0.4);
-  transition: visibility, opacity }
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); }
 .is-hidden {
   opacity: 0;
   visibility: hidden;
@@ -621,4 +627,5 @@ margin-bottom: 16px;
 .modal-close-btn-icon:hover,
 .modal-close-btn-icon:focus {
   fill: #ffffff;
+  border: none;
 }
