--- a/css/styles.css
+++ b/css/styles.css
@@ -465,8 +465,6 @@ fill: var(--accent-color);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transform: translateY(0%);
-    transform: translateY(0%);
 }
 /* Footer */
 .logo-footer {
@@ -549,13 +547,15 @@ margin-bottom: 16px;
 .card-link:focus {
   transform: translateY(0%);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 
 .cards-bottom-info {
   position: relative;
   overflow: hidden;
+  
 }
-
+.cards-link
 .cards-bottom-text {
   position: absolute;
   top: 0;
@@ -571,7 +571,13 @@ margin-bottom: 16px;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.cards-link:hover .cards-bottom-text,
+.cards-link:focus .cards-bottom-text {
+  transform: translateY(0%); 
+}
 
+ 
+  
 .backdrop {
   position: fixed;
   width: 100%;
@@ -624,8 +630,8 @@ margin-bottom: 16px;
 .modal-close-btn-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-close-btn-icon:hover,
-.modal-close-btn-icon:focus {
+.modal-close-btn:hover,
+.modal-close-btn:focus {
   fill: #ffffff;
   border: none;
 }
