--- a/css/styles.css
+++ b/css/styles.css
@@ -412,6 +412,7 @@ img {
   width: calc((100%-120%) / 6);
   width: 168px;
   height: 88px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .customers-svg:hover,
 .customers-svg:focus {
